client/src/App.css
/* ... */
.course-icon img:hover {
    -webkit-transform: rotate(180deg);
    transform: rotate(180deg);
}

.course-icon div {
    margin-top: 10px;
}

.course-icon-disabled {
    display: inline-block;
    margin: 20px;
}

.course-icon-disabled img {
    display: inline-block;
}

.course-icon-disabled div {
    margin-top: 10px;
}

.oldBrainLinkContainer {
    text-align: center;
    position: absolute;
    bottom: 10px;
    width: 100%;
}

/***********************
FLASHCARDS
***********************/

.flashcard {
    position: relative;
    margin: auto;
    margin-bottom: 180px;
    color: black;
    padding: 15px;
    padding-right: 25px;
    padding-bottom: 25px;
    width: 366px;
    height: 366px;
    text-align: left;
    background-image: url('./img/bg-question.png');
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

.flashcardImageContainer {
    text-align: center;
}

.flashcardImage {
    background-color: white;
    border: 2px solid black;
}

.flashcardAlphaImage {

}

.button-answer {
    font-family: 'Orbitron', cursive;
    position: relative;
}

.flashcard-title {
    color: gray;
}

.flashcard-title-not-casual {
    width: 20px;
    height: 20px;
    position: absolute;
    top: 15px;
    right: 30px;
    background-image: url('./img/exclamation.png');
    background-size: contain;
    background-repeat: no-repeat;
}

.flashcard-title-not-casual .flashcard-title-not-casual-tooltip {
    color: black;
    width: 165px;
    height: 30px;
    line-height: 30px;
    padding: 5px;
    position: absolute;
    top: -10px;
    right: -3px;
    visibility: hidden;
    z-index: 100;
    background-color: rgba(255,255,255,1);
    border: 1px solid #ddd;
    border-radius: 5px;
    text-align: center;
}

.flashcard-title-not-casual:hover .flashcard-title-not-casual-tooltip {
    visibility: visible;
}

.flashcard-not-casual-popup {
    cursor: default;
    padding: 10px;
    padding-left: 15px;
    padding-right: 15px;
    width: 210px;
    height: 315px;
    position: absolute;
    text-align: justify;
    top: 15px;
    left: 400px;
    background-color: white;
    border-radius: 10px;
    box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.20), 0 2px 4px rgba(0, 0, 0, 0.29);
}

.flashcard-not-casual-popup p {
    cursor: pointer;
    margin: 10px;
    padding: 5px;
    text-align: center;
    background-color: #ddd;
    color: black;
    border-radius: 5px;
}

.flashcard-not-casual-popup p:hover {
    background-color: black;
    color: white;
}

.flashcard-not-casual-popup strong {
    color: black;
}

.flashcard-not-casual-popup div {
    margin-top: 5px;
}

.flashcard-content {
    display: table;
    width: 100%;
    height: 90%;
}

.flashcard-content-text {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    padding: 40px;
    padding-top: 10px;
    padding-bottom: 20px;
    display: table-cell;
    vertical-align: middle;
    clear: both;
}

.flashcard-footer {
    position: absolute;
    bottom: 28px;
    font-size: 10px;
    color: gray;
}

.flashcard-thumbnail {
    width: 120px;
    float: right;
    margin: 0;
    margin-left: 10px;
    margin-bottom: 10px;
}

.fullscreen-container {
    display: table;
    top: 0;
    left: 0;
    background-color: rgba(0, 0, 0, 0.9);
    z-index: 1000;
    position: fixed;
    width: 100%;
    height: 100%;
    text-align: center;
}

.fullscreen-image-subtitle-container {
    width: 100%;
    text-align: center;
    color: white;
    font-size: 16px;
    position: fixed;
    z-index: 1001;
    bottom: 0;
    margin: auto;
}

.fullscreen-image-subtitle-container p {
    height: 40px;
    line-height: 40px;
    width: 250px;
    margin: auto;
    background-color: rgba(0, 0, 0, 0.50);
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}

.fullscreen-image-container {
    text-align: center;
    width: 100%;
    height: 100%;
    vertical-align: middle;
    display: table-cell;
    overflow: auto;
}

.flashcard-thumbnail-enlarged {
}

.answer-buttons-container {
    position: absolute;
    width: 100%;
    height: 180px;
    bottom: 0;
    background-color: white;
    background-image: url('img/bg-shadow-bottom.png');
    background-repeat: repeat-x;
    background-position: top;
}

.answer-button {
    margin-left: 10px;
    margin-right: 10px;
    cursor: pointer;
    width: 120px;
    height: 120px;
}

.levelUpImage {
    height: 30%;
}

.skip-tutorial-button {
    background-image: url('img/button-skip-tutorial.png');
    background-repeat: repeat-x;
    background-position: top;
    background-size: cover;
    margin: auto;
    margin-top: 20px;
    cursor: pointer;
    width: 400px;
    height: 70px;
    vertical-align: middle;
    line-height: 70px;

}

.skip-tutorial-button:hover {
    color: #eaeaea;
}

.confirm-level-up-button {
    background-image: url('img/button-skip-tutorial.png');
    background-repeat: repeat-x;
    background-position: top;
    background-size: cover;
    margin: auto;
    margin-top: 20px;
    cursor: pointer;
    width: 400px;
    height: 70px;
    vertical-align: middle;
    line-height: 70px;

}

.confirm-level-up-button:hover {
    color: #eaeaea;
}

.scrollable-text {
    max-height: 100%;
}

.center-text {
    text-align: center;
}

.input-answer {
    width: 100%;
    height: 60%;
}

.hidden > p {
    display: none;
}

.visible > p {
    display: block;
}

/***********************
INTRODUCTION
***********************/

.make-it-bigger:hover {
    transform: scale(1.3);
}

#bigger-font {
    font-size: 24px;
    font-weight: bold;
}

/***********************
TUTORIAL
***********************/

#video {
    color: white;
}

#video h2 {
    margin: 0;
    padding: 0;
    margin-bottom: 10px;
}

.flexible-wrapper-container {
    display: table;
    width: 100%;
}

.flexible-wrapper-content {
    display: table-cell;
    vertical-align: middle;
}

button {
    margin: 10px 20px;
}
/* ... */

